[metadata]
name = stevetest
summary = A stevedore based unittest loader
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
home-page = https://github.com/mtreinish/stevetest
classifier =
    License :: OSI Approved ::  GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    stevetest

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = stevetest/locale
domain = stevetest

[update_catalog]
domain = stevetest
output_dir = stevetest/locale
input_file = stevetest/locale/stevetest.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = stevetest/locale/stevetest.pot
